tests/dependencies/cycle.sy
a :: b
b :: a

start :: fn {
    a
}

// error: Error::CompileError { .. }
// error: Error::CompileError { .. }
